Add support for using root certs from the OS
This makes the various CLIs trust certs from the host OS.

* Introduce the `org.pkl.core.http.CertificateLoader` SPI to add
  trusted CA certs
* Introduce `pkl-certs`, a library that provides SPI services for
  loading certs on macOS, Linux, and Windows.
  On macOS and Windows, it uses a C library to call into system
  libraries to get trusted root certs.
  On Linux, it searches for PEM files in known locations.

Java users can use system root certs by depending on the `pkl-certs`
artifact, and calling `addCertificatesFromServiceProviders()`.